# umscheduler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
database/: Constraints.docx  DBSchema.sql
documentation/: AlternateSchedulingProject.docx  CS451R.Group14.EffortEstimate.xlsx  Scheduling Project Conditions.docx  charter.tex  risks.md
solver/: __init__.py  allele.py  individual.py  population.py
src/: main.rs
ui/: package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.tsx
umscheduler/: Cargo.toml
umscheduler/src/: database.rs  main.rs
